--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detalle-agregar/chat-detalle-agregar.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detalle-agregar/chat-detalle-agregar.component.html
@@ -1,4 +1,18 @@
-<form [formGroup]="mensajeForm">
-  <input formControlName="mensaje" [attr.disabled]="disabled ? '' : null">
-</form>
-<button (click)="enviarMensaje()" [disabled]="disabled">enviar</button>
+<div class="container">
+  <div class="row ngx-utilitario-detalle-agregar">
+    <div class="col-11">
+      <form [formGroup]="mensajeForm">
+        <input class="col-12" formControlName="mensaje" [attr.disabled]="disabled ? '' : null"
+          [placeholder]="placeholder">
+      </form>
+    </div>
+    <div class="col-1">
+      <div class="ngx-utilitario-btns-acciones">
+        <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray"><i class="fa fa-camera"
+            aria-hidden="true"></i></button>
+        <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray" (click)="enviarMensaje()"><i class="fa fa-paper-plane"
+            aria-hidden="true"></i></button>
+      </div>
+    </div>
+  </div>
+</div>
