--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat.component.scss
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat.component.scss
@@ -13,3 +13,16 @@
     float: right;
     font-size: inherit;
 }
+
+.header-chat1 span{
+    float: right;
+    font-size: inherit;
+}
+
+.header-chat2 span{
+    float: right;
+    font-size: inherit;
+}
+.ngx-utilitario-chat{
+    height: 400px;
+}
