--- a/src/styles_custom.scss
+++ b/src/styles_custom.scss
@@ -14,7 +14,7 @@
 * Estilo para un conjunto de botones 
 */
 .ngx-utilitario-btns-acciones {
-  display: inline-block;
+  display: flex;
   vertical-align: middle;
   width: 100%;
   text-align: center;
