--- a/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
+++ b/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
@@ -13,33 +13,42 @@
         <div class="col-12">{{conversacion.estado}}</div>
       </div>
     </div>
-    <div class="col-1">
-      <i class="fa fa-trash-o" aria-hidden="true" alt="eliminar conversacion" (click)="eliminarConversacion()"></i>
-      <i *ngIf="!conversacion.bloqueo" class="fa fa-ban" aria-hidden="true" alt="Bloquear conversacion"
-        (click)="bloquear()"></i>
-      <i *ngIf="validarEstadoBLoqueado(conversacion.bloqueo)" class="fa fa-unlock" aria-hidden="true"
-        alt="Bloquear conversacion" (click)="desbloquear()"></i>
+    <div class="col-1 ngx-utilitario-btns-acciones">
+      <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray"
+        (click)="eliminarConversacion()">
+        <i class="fa fa-trash-o" aria-hidden="true" alt="eliminar conversacion"></i>
+      </button>
+      <button *ngIf="!conversacion.bloqueo" type="button"
+        class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray" (click)="bloquear()">
+        <i class="fa fa-ban" aria-hidden="true" alt="Bloquear conversacion"></i>
+      </button>
+      <button *ngIf="validarEstadoBLoqueado(conversacion.bloqueo)" type="button"
+        class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray" (click)="desbloquear()">
+        <i class="fa fa-unlock" aria-hidden="true" alt="Bloquear conversacion"></i>
+      </button>
     </div>
   </div>
-  <div class="row ngx-utilitario-cuerpo-Chat">
-    <div class="col-12" *ngFor="let item of conversacion.mensajes; let i=index ">
-      <div class="container">
-        <div class="row" *ngIf="lineaDia(item.fecha,i)">
-          <div class="w-100 ngx-utilitario-chat-linea">
-            <span class="ngx-utilitario-chat-linea-span">
-              {{diferenciaDias(item.fecha)}}
-            </span>
+  <div class="container-fluid">
+    <div class="row ngx-utilitario-cuerpo-Chat">
+      <div class="col-12" *ngFor="let item of conversacion.mensajes; let i=index ">
+        <div class="container">
+          <div class="row" *ngIf="lineaDia(item.fecha,i)">
+            <div class="w-100 ngx-utilitario-chat-linea">
+              <span class="ngx-utilitario-chat-linea-span">
+                {{diferenciaDias(item.fecha)}}
+              </span>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container">
+        <div class="container">
           <div [ngClass]="escogerEstilo(item.tipoMensaje)">
             <div>{{item.mensaje}}</div>
             <div>{{item.hora}}
               <span *ngIf="estadoMensajeEnviado(item.estadoMensaje, item.tipoMensaje)" class="ngx-utilitario-msj-enviado">
                 <i class="fa fa-check"></i>
               </span>
-              <span *ngIf="estadoMensajeRecibido(item.estadoMensaje, item.tipoMensaje)" class="ngx-utilitario-msj-recibido">
+              <span *ngIf="estadoMensajeRecibido(item.estadoMensaje, item.tipoMensaje)"
+                class="ngx-utilitario-msj-recibido">
                 <i class="fa fa-check"></i>
                 <i class="fa fa-check"></i>
               </span>
@@ -47,13 +56,16 @@
                 <i class="fa fa-check"></i>
                 <i class="fa fa-check"></i>
               </span>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="row">
-    <ngx-utilitario-chat-detalle-agregar class="col-12 ngx-utilitario-chat-agregar"
-      (nuevoMensaje)="enviarMensaje($event)" [disabled]="conversacion.bloqueo"></ngx-utilitario-chat-detalle-agregar>
+  <div class="container-fluid">
+    <div class="row">
+      <ngx-utilitario-chat-detalle-agregar class="col-12 ngx-utilitario-chat-agregar"
+        (nuevoMensaje)="enviarMensaje($event)" [disabled]="conversacion.bloqueo"></ngx-utilitario-chat-detalle-agregar>
+    </div>
   </div>
 </div>
