--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div class="row row-no-padding">
+<div class="row row-no-padding ngx-utilitario-chat">
   <div class="col-4">
     <header class="header-chat">
       Chats
