--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -4,24 +4,52 @@
 */
 
 .ngx-utilitario-modal{
+  display: table;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  right: 0;
-  bottom: 0;
-  transform: translate(-50%,-50%);
-  width: fit-content;
-  height: fit-content;
-  max-height: 100%;
-  max-width: 100%; 
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   z-index: 1000;
-  overflow: auto;
+  overflow-y: auto;
+  margin-top: 15px;
 }
 
 .ngx-utilitario-modal .ngx-utilitario-modal-body {
-  background: #fff;
+  display: table-cell;
+  vertical-align: middle;
+  padding: 0;
+  margin: 0;
   width: fit-content;
   height: fit-content;
+  overflow-y: auto;
+}
+
+.ngx-utilitario-modal .ngx-utilitario-modal-content{
+  background: #fff;
+  margin: 0 auto;
+  width: fit-content;
+  height: fit-content;
+  max-height: 100%;
+  overflow-y: auto;
+  padding: 15px;
+}
+
+.ngx-utilitario-modal .ngx-utilitario-modal-content .ngx-utilitario-modal-cerrar{
+  opacity: 1;
+  font-size: 18px;
+  position: absolute;
+  top: -30px;
+  right: -30px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-radius: 100%;
+  -moz-border-radius:100%;
+  box-shadow:0px 1px 2px rgba(0,0,0,0.2);
+  padding: 0px;
 }
 
 .ngx-utilitario-modal-background {
