--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,15 +1,18 @@
 <div class="ngx-utilitario-modal">
   <div class="ngx-utilitario-modal-body">
     <div class="ngx-utilitario-modal-content">
-      <div style="position: absolute;">
+      <div style="position: relative">
+        <!-- <button (click)="animacion" [@openClose]="isOpen ? 'open' : 'closed'" (click)="toggle()"> animacion</button> -->
         <button type="button" class="ngx-utilitario-modal-cerrar" (click)="close()">
           <span aria-hidden="true">&times;</span>
         </button>
+        <div class="ngx-utilitario-modal-ngcontent">
+          <ng-content>
+          </ng-content>
+        </div>
       </div>
-      <ng-content>
-      </ng-content>
     </div>
   </div>
 </div>
-<div class="ngx-utilitario-modal-background" [@openClose]="showModal"></div>
+<div class="ngx-utilitario-modal-background"></div>
 <div class="ngx-utilitario-modal-open"></div>
