--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -8,12 +8,8 @@
     <ngx-utilitario-chat-lista [lista]="lista" (clickLista)="clickListaDetalle($event)"></ngx-utilitario-chat-lista>
   </div>
   <div class="col-8">
-    <ngx-utilitario-chat-conversacion 
-    [conversacion]="conversacion" 
-    (nuevoMensaje)="enviarMensaje($event)"
-    (eliminarMensajes)="eliminarMensajes()"
-    (bloquearConversacion)="bloquearChat($event)"
-    >
-  </ngx-utilitario-chat-conversacion>
+    <ngx-utilitario-chat-conversacion [conversacion]="conversacion" (nuevoMensaje)="enviarMensaje($event)"
+      (eliminarMensajes)="eliminarMensajes()" (bloquearConversacion)="bloquearChat($event)">
+    </ngx-utilitario-chat-conversacion>
   </div>
 </div>
