--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div class="ngx-utilitario-modal">
   <div class="ngx-utilitario-modal-body">
     <div class="ngx-utilitario-modal-content">
-      <div style="position: absolute;">
+      <div style="position: relative;">
         <button type="button" class="ngx-utilitario-modal-cerrar" (click)="close()">
           <span aria-hidden="true">&times;</span>
         </button>
