--- a/documentation/components/ChatDetalleComponent.html
+++ b/documentation/components/ChatDetalleComponent.html
@@ -561,7 +561,7 @@ export class ChatDetalleComponent implements OnInit {
   }
   ultimaFecha(mensajes: IChatConversacionDetalle[]) {
     if (mensajes.length &gt; 0) {
-      if (this.fecha.compararFechas(new Date(mensajes[mensajes.length-1].fecha)))
+      if (this.fecha.differenceDays(new Date(mensajes[mensajes.length-1].fecha)))
         return mensajes[mensajes.length - 1].hora;
       else{
         return mensajes[mensajes.length - 1].fecha;
