añadir test a fecha y pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
+  <h1 class="display-4">Welcome to ngx-utilitario-renatoclt!</h1>
   <p class="lead">Estos son los componentes que tienene esta libreria.</p>
   <p>Se usa bootsrap y fontawesome para estilo e iconos</p>
   <p>Se tiene la clases row-no-padding elimina los padding de los costados a las columnas automaticamente </p>
 </div>
-
+<!-- 
 <div class="row">
   <rclt-cards class="col-2" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"></rclt-cards>
   <div class="col-10"></div>
@@ -22,12 +22,12 @@
 </div>
 <div class="container-fluid">
   <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
-</div>
+</div> -->
 
-
+<!-- 
 <div class="jumbotron">menu</div>
-<rclt-menu-dot></rclt-menu-dot>
-
+<rclt-menu-dot></rclt-menu-dot> -->
+<!-- 
 <div class="jumbotron">FormControl</div>
 <div class="container-fluid">
   <rclt-input class="col-4"></rclt-input>
@@ -117,4 +117,4 @@
       <a mat-raised-button routerLink=".">Link</a>
     </div>
   </div>
-</div>
+</div> -->
