--- a/src/app/chat/chat/chat-detalle/chat-detalle.component.html
+++ b/src/app/chat/chat/chat-detalle/chat-detalle.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-2">
       <img class="img-fluid rounded-circle" src={{detalle.img}} />
-      <div *ngIf="detalle.estado" class="estadoConectado">
+      <div *ngIf="estadoChat(detalle)" class="estadoConectado">
       </div>
     </div>
     <div class="col-8">
