--- a/src/app/chat/chat/chat-detalle/chat-detalle.component.html
+++ b/src/app/chat/chat/chat-detalle/chat-detalle.component.html
@@ -1,7 +1,7 @@
 <div class="content ngx-utilitario-chat-detalle" (click)="click()">
   <div class="row">
     <div class="col-2">
-      <img class="img-fluid rounded-circle" src={{detalle.img}} />
+      <img class="img-fluid rounded-circle" alt="detalle.nombre" src={{detalle.img}} />
       <div *ngIf="estadoChat(detalle)" class="estadoConectado">
       </div>
     </div>
