--- a/src/app/repeat-icon/repeat-icon.component.html
+++ b/src/app/repeat-icon/repeat-icon.component.html
@@ -1,4 +1,4 @@
 <ng-container class="repetirIcono">
-    <i *ngFor="let item of activo | numberToArray" class="{{icono}}" [style.color]="colorActivo"></i>
-    <i *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}" [style.color]="color"></i>
+    <em *ngFor="let item of activo | numberToArray" class="{{icono}}" [style.color]="colorActivo"></em>
+    <em *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}" [style.color]="color"></em>
 </ng-container>
